--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body class="container mx-auto box-border ">
     <!-- menu -->
-    <!-- <div class="container mx-auto mt-4 flex items-center justify-start gap-8">
+    <div class="container mx-auto mt-4 flex items-center justify-start gap-8">
         <div class="logo"><img src="./image/Euphoria.png" alt=""></div>
         <div class="flex items-center gap-14 text-2xl">
             <a href="">Shop</a>
@@ -31,7 +31,7 @@
             </div>
         </div>
         
-    </div> -->
+    </div>
     <!-- baner -->
     <div>
         <img class="w-full mt-4" src="./image/Banner.png" alt="">
